--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,20 +1,12 @@
-@media (max-width: 950px){
+@media (max-width: 950px) {
 
 
-
-    .container{
-        max-width: 100%;
-        height: 100vh;
-    }
-
-    .card{
+    .card {
         display: flex;
         flex-direction: column;
-        width: 250px;
-        height: 550px;
-        margin-bottom: 50px;
+        padding-bottom: 100px;
 
     }
 
-   
+
 }
